# TurtleLink

Notes/: April_11.txt
ros_workspace/.catkin_tools/profiles/default/: devel_collisions.txt
ros_workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros_workspace/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
ros_workspace/devel/.private/gazebo_ros_link_attacher/: .catkin  .rosinstall  setup.sh
ros_workspace/devel/.private/rsp_bringup/: .catkin  .rosinstall  setup.sh
ros_workspace/devel/.private/rsp_mapping/: .catkin  local_setup.sh
ros_workspace/devel/.private/rsp_msgs/: .catkin  .rosinstall
ros_workspace/devel/.private/rsp_pathplanning/: .catkin
ros_workspace/devel/.private/rsp_rviz/: .catkin  .rosinstall
ros_workspace/devel/.private/rsp_usercontrol/: .catkin  .rosinstall  local_setup.sh
ros_workspace/devel/.private/st_gazebo_perfect_map_generator/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_workspace/devel/.private/turtlebot3_bringup/: .catkin  .rosinstall  local_setup.sh
ros_workspace/devel/.private/turtlebot3_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_workspace/devel/.private/turtlebot3_example/: .catkin
ros_workspace/devel/.private/turtlebot3_fake/: .catkin
ros_workspace/devel/.private/turtlebot3_gazebo/: .catkin  setup.sh
ros_workspace/devel/.private/turtlebot3_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_workspace/devel/.private/turtlebot3_navigation/: .catkin  local_setup.sh
ros_workspace/devel/.private/turtlebot3_slam/: .catkin  setup.sh
ros_workspace/devel/.private/turtlebot3_teleop/: .catkin  local_setup.sh
ros_workspace/devel/include/rsp_msgs/: Message.h  Move.h  MoveRequest.h  MoveResponse.h  Reconfig.h  ReconfigRequest.h  ReconfigResponse.h
ros_workspace/devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
ros_workspace/devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
ros_workspace/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  rsp_bringup.pc  rsp_mapping.pc  rsp_msgs.pc  rsp_pathplanning.pc  rsp_rviz.pc  rsp_usercontrol.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
ros_workspace/devel/lib/rsp_rviz/: rsp_command_node
ros_workspace/devel/lib/rsp_usercontrol/: rsp_teleop_joy_node
ros_workspace/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
ros_workspace/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
ros_workspace/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
ros_workspace/devel/lib/turtlebot3_slam/: flat_world_imu_node
ros_workspace/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
ros_workspace/devel/share/rsp_bringup/cmake/: rsp_bringupConfig-version.cmake  rsp_bringupConfig.cmake
ros_workspace/devel/share/rsp_mapping/cmake/: rsp_mappingConfig-version.cmake  rsp_mappingConfig.cmake
ros_workspace/devel/share/rsp_msgs/cmake/: rsp_msgs-msg-extras.cmake  rsp_msgs-msg-paths.cmake  rsp_msgsConfig-version.cmake  rsp_msgsConfig.cmake
ros_workspace/devel/share/rsp_rviz/cmake/: rsp_rvizConfig-version.cmake  (+1 more)
ros_workspace/logs/gazebo_ros_link_attacher/: build.make.000.log.stderr
ros_workspace/logs/st_gazebo_perfect_map_generator/: build.make.000.log.stderr  build.make.001.log.stderr
ros_workspace/no_build/rsp_bringup_backup/: CMakeLists.txt
ros_workspace/no_build/rsp_bringup_backup/launch/: amcl_demo.launch  movement_demo.launch  rsp_bringup copy.launch  rsp_bringup_additional.launch  rsp_house_fouragents.launch  turtlebot_world.launch
ros_workspace/no_build/rsp_bringup_backup/nodes/: rsp_turtlebot3_teleop_key
ros_workspace/no_build/rsp_bringup_backup/rviz/: rsp_empty_singleagent.rviz  rsp_house_fouragents.rviz  rsp_room_fouragents.rviz
ros_workspace/no_build/rsp_rviz_backup/: CMakeLists.txt
ros_workspace/no_build/rsp_rviz_backup/include/rsp_rviz/: rsp_command.h
ros_workspace/no_build/rsp_rviz_backup/src/: rsp_rviz.cpp
ros_workspace/src/rsp_pkg/rsp_bringup/: package.xml
ros_workspace/src/rsp_pkg/rsp_mapping/: CMakeLists.txt
ros_workspace/src/rsp_pkg/rsp_msgs/: CMakeLists.txt
ros_workspace/src/rsp_pkg/rsp_msgs/msg/: Message.msg
ros_workspace/src/rsp_pkg/rsp_msgs/srv/: Move.srv  Reconfig.srv
ros_workspace/src/rsp_pkg/rsp_navigation/: CMakeLists.txt  package.xml
ros_workspace/src/rsp_pkg/rsp_navigation/include/rsp_navigation/: rsp_go_to_point_client.hpp  rsp_go_to_point_server.hpp
ros_workspace/src/rsp_pkg/rsp_navigation/launch/: rsp_turtlebot3_navigation_point_control.launch
ros_workspace/src/rsp_pkg/rsp_navigation/src/: rsp_go_to_point_client.cpp  rsp_go_to_point_client_node.cpp  rsp_go_to_point_server.cpp  rsp_go_to_point_server_node.cpp  rsp_reconfiguration_node.cpp  rsp_velocity_assignment_node.cpp
ros_workspace/src/rsp_pkg/rsp_pathplanning/: CMakeLists.txt
ros_workspace/src/rsp_pkg/rsp_rviz/: package.xml  plugin_description.xml
ros_workspace/src/rsp_pkg/rsp_usercontrol/: CMakeLists.txt  package.xml
ros_workspace/src/rsp_pkg/rsp_usercontrol/include/rsp_usercontrol/: rsp_teleop_joy.h
ros_workspace/src/rsp_pkg/rsp_usercontrol/launch/: rsp_teleop_joy.launch  rsp_teleop_key.launch
ros_workspace/src/rsp_pkg/rsp_usercontrol/nodes/: rsp_teleop_key
ros_workspace/src/rsp_pkg/rsp_usercontrol/src/: rsp_teleop_joy.cpp  rsp_teleop_joy_node.cpp
(+253 files in other folders)
